--- a/style.css
+++ b/style.css
@@ -32,7 +32,20 @@ body{
 @media only screen and (max-width: 768px){
 
     .main{
-        font-size: 40px;
+        font-size: 50px;
         padding:15px 5px;
+    }
+}
+
+@media only screen and (max-width: 320px){
+
+    .main{
+        font-size: 30px;
+        padding:15px 0;
+    }
+
+    .BG-text{
+        font-size:17px;
+        padding: 10px 0;
     }
 }
